<resources>
    <string name="app_name">TinyKeePass</string>
    <string name="database_url" translatable="false">https://database-url.kdbx</string>
    <string name="no_screen_lock">No secure screen lock (PIN/pattern/password)</string>
    <string name="no_fingerprint_detected">No fingerprint scanner detected on this device</string>
    <string name="no_fingerprint_enrolled">No enrolled fingerprint found</string>
    <string name="auth_key_title">User Authentication</string>
    <string name="auth_key_description">Please use your screen lock to access master key of KeePass database.</string>
    <string-array name="authenticate_method">
        <item>No authentication</item>
        <item>Authenticate with fingerprint</item>
    </string-array>

    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_dialog_title">User Authentication</string>
    <string name="fingerprint_failed">Fingerprint not recognized</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="title_activity_main">TinyKeePass</string>
    <string name="action_lock_db">Lock database</string>
    <string name="action_search">Search</string>
    <string name="username">Username</string>
    <string name="require_http_auth">Require HTTP Basic Authentication</string>
    <string name="password">Password</string>
    <string name="master_password">Master Password</string>
    <string name="show">Show</string>
    <string name="unlock">Unlock</string>
    <string name="configure">Configure</string>
    <string name="db_is_locked_or_unconfigured">KeePass database is locked or un-configured</string>
    <string name="username_copied">Username \"%s\" copied</string>
    <string name="copy_password">Copy password</string>
    <string name="password_copied">Password copied</string>
    <string name="fail_to_decrypt">Failed to decrypt keys</string>
    <string name="broken_keys">Keys are broken or unconfigured</string>
    <string name="sync_done">Synchronize finished</string>
    <string name="fail_to_auth">Failed to authenticate user</string>
    <string name="fail_to_sync">Failed to fetch database: %s</string>
    <string name="fetching_database">Fetching database</string>
    <string name="fetch_ok">Database fetched</string>
    <string name="fetch_fail">Database fetch failed</string>
    <string name="fetch_cancel_by_user">Cancelled by user</string>
    <string name="action_open_in_browser">Open URL</string>
    <string name="action_copy_username">Copy username</string>
    <string name="action_copy_password">Copy password</string>
    <string name="action_exit">Exit</string>
    <string name="action_copy_url">Copy URL</string>
    <string name="url_copied">URL copied</string>
    <string name="action_show_password">Show password</string>
    <string name="channel_syncing">Syncing progress</string>
    <string name="channel_coping">Click to copy</string>
    <string name="title_show_password">Show password</string>
    <string name="open_file">File</string>
    <string name="basic_auth_with_non_http">Only support for HTTP/HTTPS</string>
    <string name="clean_config">Reset Configure</string>
    <string name="clean_config_confirm">Are you sure you want clean configuration including database file and password?</string>
    <string name="clean_config_ok">Reset finished, database and password has been removed.</string>
    <string name="autofill_not_support_save">Not support save yet</string>
    <string name="autofill_unlock_db">Touch to unlock</string>
    <string name="title_autofill_select">Select to autofill</string>
    <string name="autofill_not_title">(unnamed)</string>
    <string name="autofill_item_show_all">Show all</string>
    <string name="button_confirm">Confirm</string>
    <string name="image_alt_icon">icon</string>
    <string name="open_db_dialog_title">Decrypting…</string>
    <string name="open_db_dialog_note">It may take several seconds</string>
    <string name="open_db_dialog_fail">Fail to open database</string>
    <string name="require_user_auth">Require user auth before unlock</string>
    <string name="retry">Retry</string>
    <string name="error_get_master_key">Fail to get master key: %s</string>
    <string name="no_master_key">Master key missing, try reconfigure database.</string>
    <string name="click_label_copy_password">Copy username and password</string>
    <string name="click_label_select_entry">Show the password and options</string>
    <string name="action_sync">Sync database</string>
    <string name="no_remote_db">No remote database found, try reconfigure database.</string>
    <string name="screen_title_setup">Setup Database</string>
    <string name="cancel_search">Cancel search</string>
    <string name="clear_input">Clear input</string>
    <string name="error_database_not_configured">KeePass database is not configured</string>
</resources>
