<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy_password"
        android:icon="@drawable/ic_vpn_key_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_copy_password" />
    <item
        android:id="@+id/action_show_password"
        android:icon="@drawable/ic_visibility_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_show_password" />
    <item
        android:id="@+id/action_copy_username"
        android:icon="@drawable/ic_person_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_copy_username" />
    <item
        android:id="@+id/action_copy_url"
        android:icon="@drawable/ic_link_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_copy_url"/>
    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_open_in_browser_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_open_in_browser"/>
</menu>